# EngrenagemDeMetalSolida

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  a.txt
assets/: exclamation.jpg~  exclamation.png~  file.json  transfer.json
assets/72x72/: 72x72_map.tmx  72x72_tiles.tsx
assets/maps/: 15x10.map  m0.map  m1.map  m2.map  m3.map  map10x10.map  test.map
assets/mg2/: .snakeSprites.png-autosave.kra  snakeSprites.png~
doc/html/: annotated.html  camera_8cpp.html  camera_8cpp__incl.map  camera_8cpp__incl.md5  camera_8h.html  camera_8h__dep__incl.map  camera_8h__dep__incl.md5  camera_8h__incl.map  camera_8h__incl.md5  camera_8h_source.html  camera__controller_8cpp.html  camera__controller_8cpp__incl.map  camera__controller_8cpp__incl.md5  camera__controller_8h.html  camera__controller_8h__dep__incl.map  camera__controller_8h__dep__incl.md5  camera__controller_8h__incl.map  camera__controller_8h__incl.md5  camera__controller_8h_source.html  classCamera-members.html  classCamera.html  classCamera__coll__graph.map  classCamera__coll__graph.md5  classCamera__controller-members.html  classCamera__controller.html  classCamera__controller__coll__graph.map  classCamera__inherit__graph.md5  classController-members.html  classController.html  classElement-members.html  classElement.html  classElement__inherit__graph.map  classElement__inherit__graph.md5  classEventos-members.html  classEventos.html  classEventos__coll__graph.map  classMap-members.html  classMap.html  classPlayer-members.html  classPlayer.html  (+131 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_2.js  all_3.js  all_4.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+18 more)
doc/latex/: annotated.tex  camera_8cpp.tex  camera_8cpp__incl.md5  camera_8h.tex  camera_8h__dep__incl.md5  camera_8h__incl.md5  camera__controller_8cpp.tex  camera__controller_8cpp__incl.md5  camera__controller_8h.tex  camera__controller_8h__dep__incl.md5  camera__controller_8h__incl.md5  classCamera.tex  classCamera__coll__graph.md5  classCamera__controller.tex  classCamera__controller__coll__graph.md5  classCamera__inherit__graph.md5  classController.tex  classController__coll__graph.md5  classElement.tex  classElement__coll__graph.md5  classElement__inherit__graph.md5  classEventos.tex  classEventos__coll__graph.md5  classMap.tex  classMap__coll__graph.md5  classPlayer.tex  classPlayer__coll__graph.md5  classPlayer__inherit__graph.md5  classPorta.tex  classPorta__coll__graph.md5  classPorta__controller.tex  classPorta__inherit__graph.md5  classViewer.tex  classViewer__coll__graph.md5  classcollisionController.tex  classcollisionController__coll__graph.md5  collisionController_8cpp.tex  collisionController_8cpp__incl.md5  collisionController_8h.tex  collisionController_8h__dep__incl.md5  (+48 more)
include/: camera.h  camera_controller.h  collisionController.h  controller.h  element.h  eventos.h  map.h  player.h  porta.h  porta_controller.h  sl_controller.h  transfer_controller.h  viewer.h
massa_mola/: massa_mola  massa_mola.cpp
src/: CMakeLists.txt  Session.vim  camera.cpp  camera.h  camera_controller.cpp  camera_controller.h  camera_controller2.cpp  camera_controller2.h  collisionController.cpp  collisionController.h  controller.cpp  controller.h  element.cpp  element.h  eventos.cpp  eventos.h  main.cpp  map.cpp  map.h  player.cpp  player.h  porta.cpp  porta.h  porta_controller.cpp  porta_controller.h  sl_controller.cpp  transfer_controller.cpp  viewer.cpp  viewer.h
src/.vim/: controller.vim
src/.vim/sessions/: session1.vim  session2.vim
tilemapPy/: 1.txt  15x10.map  b.txt  map10x10.map  test.map  tilemapPy.py
